# XCPlite

./: .clang-format  .clang-tidy  .gitignore  A2L.c  A2L.h  CANape.aml  CHANGELOG.md  CMakeLists.txt  C_demo.a2l  Doxyfile  LICENSE  README.md  XCP_104_comp.aml  XCPlite.sln  XCPpi.service  XCPpi.sln  XCPpi.vcxproj  XCPwi.sln  XCPwi.vcxproj  build.bat  build.sh  build_qnx.bat  c_demo.a2l  clean.sh  clock.c  clock.h  cpp_demo.a2l  create_a2l.txt  ecu.c  ecu.h  ecupp.cpp  ecupp.hpp  ecustress.c  ecustress.h  hello_xcp.a2l  hello_xcp_cpp.a2l  main.cpp  main.h  main_cfg.h  master1.sh  (+42 more)
.github/workflows/: default.yml
CANape/: CANape.ini  CanapeCmd.ini  XCPlite.cna  XCPpi_autodetect.a2l
CANape/MeasurementData/: .gitignore
CANape18/: .gitignore  CANape.ini  CanapeCmd.ini  XCPpi.A2LPROJ  XCPpi.a2l  XCPpi.cna  XCPpi.cnaxml
CANape18/MeasurementData/: .gitignore
CANape19/: .gitignore  CANape.ini  CSM.a2l  CSM.diff  CanapeCmd.ini  XCPpi.a2l  XCPpi.cna  XCPpi.cnaxml  XCPpi_12.cna  XCPpi_12.cnaxml  XCPpi_Max.cna  XCPpi_Max.cnaxml  XCPpi_autodetect.A2L
CANape19/MeasurementData/: .gitignore
CANape20/: CANape.ini  Test.cna  XCPlite.cna
CPP_Demo/: CMakeLists.txt  CPP_Demo.a2l  CPP_Demo.vcxproj  CPP_Demo.vcxproj.filters  main.cpp  main.h  main_cfg.h  main_cfg.h.in  xcpAppl.c  xcpAppl.h  xcp_cfg.h  xcptl_cfg.h
CPP_Demo/CANape/: CANape.21-0-21.ini  CANape.ini  CPP_Demo.cna  CanapeCmd.ini  XCPlite.cna
CPP_Demo/CANape_static/: CANape.ini  XCPlite.cna
C_Demo/: CMakeLists.txt  C_Demo.a2l  C_Demo.vcxproj  C_Demo.vcxproj.filters  C_Demo_Linux.vcxproj  ecu.c  ecu.h  main.c  main.h  main_cfg.h  main_cfg.h.in  xcpAppl.c  xcpAppl.h  xcp_cfg.h  xcptl_cfg.h
C_Demo/CANape/: CANape.ini  C_Demo.a2l  C_Demo.cna  CanapeCmd.ini  CustomProperties.json
C_Demo/CANape14/: CANape.ini  C_Demo.cna  CanapeCmd.ini
Use_in_ECU/: CMakeLists.txt  main.c  main_cfg.h  xcp.h  xcpLite.h  xcpTl.c  xcpTl.h  xcp_cfg.h  xcptl_cfg.h
XCPlib/: CMakeLists.txt  main_cfg.h  xcpAppl.c  xcp_cfg.h  xcptl_cfg.h
XCPlib/XCPlib.xcodeproj/: project.pbxproj
XCPlib/XCPlib.xcodeproj/project.xcworkspace/xcuserdata/rainer.xcuserdatad/: UserInterfaceState.xcuserstate
XCPlib/XCPlib.xcodeproj/xcuserdata/rainer.xcuserdatad/xcschemes/: xcschememanagement.plist
XCPlite/: CANape.ini  CMakeLists.txt  CalTest.cna  CalTest.cnaxml  CanapeCmd.ini  DebugLevel.cnaxml  XCPlite.a2l  XCPlite.cna  XCPlite.cnaxml  XCPlite.vcxproj  XCPlite.vcxproj.filters  XCPpi.cna  XCPpi_autodetect.a2l  XCPstress.cnaxml  build.sh  darwin-arm-toolchain.cmake  main.c  main.h  main_cfg.h  xcpAppl.c  xcp_cfg.h  xcptl_cfg.h
XCPlite.xcodeproj/: project.pbxproj
XCPlite/CANape/: CANape.ini  CanapeCmd.ini  XCPlite.A2L  XCPlite.cna  XCPsim_autodetect.a2l
XCPlite/XCPlite.xcodeproj/: project.pbxproj
XCPlite/XCPlite.xcodeproj/project.xcworkspace/xcuserdata/rainer.xcuserdatad/: UserInterfaceState.xcuserstate
XCPlite_CNP18/: CANape.ini  XCPpi.a2l  XCPpi.cna
XCPlite_CNP19/: CANape.ini  XCPpi.cna
XCPlite_PTP/: CanapeCmd.ini  PTP.cna  XCP_104.aml  XCPpi.cna  XCPpi_autodetect.a2l
XCPlite_Stress/: CANape.ini  CSM.a2l  CanapeCmd.ini  XCPpi.cna  XCPpi_autodetect.a2l
XCPlite_Stress_CNP19/: CANape.ini  CanapeCmd.ini
cmake/: xcpliteConfig.cmake.in
docs/: BUILDING.md  CAL_RCU.md  README.md  SHM.md  TECHNICAL.md  Technical Reference Xcp Lite.md  XCP_INTRODUCTION.md  XCPlite_API.md  xcplib cfg.md  xcplib.md  xcplib_cfg.md
docs/info/: CPP_TYPE_TRAITS_GUIDE.md
examples/: README.md
examples/bpf_demo/: README.md  build_bpf.sh  test_processes.sh
examples/c_demo/: README.md
examples/external_example/: .gitignore  README.md  build.sh
examples/hello_xcp/: README.md
examples/hello_xcp_cpp/: README.md
examples/multi_thread_demo/: README.md
examples/no_a2l_demo/: README.md  create_a2l.sh  update_a2l.sh
examples/ptp4l_demo/: README.md
examples/ptp_demo/: README.md
examples/silkit_demo/: .gitignore  CMakeLists.txt  Publisher.a2l  Publisher_V1.5.a2l  README.md  Subscriber.a2l  Subscriber_V1.5.a2l  build.sh  clean.sh  main.a2l  run.sh  silkit_participant_cfg.json  xcp_status.sh
examples/silkit_demo/CANape/: CANape.ini  Publisher_autodetect.a2l  Subscriber_autodetect.a2l  xcp_demo.cna  xcp_demo_autodetect.a2l
examples/silkit_demo/CANape_SHM/: CANape.ini  Publisher_autodetect.a2l  SilKitDemo_autodetect.a2l  SilKit_Demo.cna  SilKit_Demo_autodetect.a2l  Subscriber_autodetect.a2l  xcp_demo.cna
examples/silkit_demo/SilKit_Demo/: CANape.ini  SilKit_Demo.cna  SilKit_Demo_autodetect.a2l
examples/silkit_demo/include/: ApplicationBase.hpp  CommandlineParser.hpp  PubSubDemoCommon.hpp  SignalHandler.hpp  XcpHelper.hpp
examples/silkit_demo/src/: PublisherDemo.cpp  SubscriberDemo.cpp  XcpServer.cpp
inc/: a2l.h  a2l.hpp  xcplib.h  xcplib.hpp
src/: A2L.c  A2L.cpp  A2L.h  A2L.hpp  A2Lpp.cpp  A2Lpp.hpp  _xcp_cfg.h  a2l.c  a2l.h  a2l.hpp  a2l_writer.c  a2l_writer.h  cal.c  cal.h  dbg_print.h  main.h  main_cfg.h  mem_a2l.c  mem_a2l.h  options.c  options.h  persistence.c  persistence.h  persistency.c  persistency.h  platform.c  platform.h  ptp.c  ptp.h  queue.h  queue32.c  queue64.c  queue64f.c  queue64v.c  shm.c  shm.h  util.c  util.h  xcp.cpp  xcp.h  (+35 more)
src/old/: queue64.c
test/: run_all.sh  test.sh  test_bin2hex_pi.sh  test_bintool.sh  test_bpf_demo_pi.sh
test/a2l_test/: a2l_test_expected.a2l
test/cal_test/: README.md
test/clock_test/: README.md
test/daq_test/: README.md
test/fixtures/: c_demo.a2l  cpp_demo.a2l  hello_xcp.a2l  hello_xcp_cpp.a2l  (+3 more)
tools/: cfa_lookup.sh  shm_cleanup.sh
tools/bintool/: .gitignore  Cargo.toml  README.md  hex_diff.py
tools/bintool/src/: bin_format.rs  main.rs
tools/xcpclient/: Cargo.toml  README.md  rustfmt.toml
tools/xcpclient/src/: lib.rs  main.rs  xcp_test_executor.rs
tools/xcpclient/src/bin_reader/: bin_format.rs  mod.rs
tools/xcpclient/src/elf_reader/: mod.rs
tools/xcpclient/src/elf_reader/debuginfo/: cfa.rs  mod.rs
tools/xcpclient/src/elf_reader/debuginfo/dwarf/: attributes.rs  mod.rs  typereader.rs
tools/xcpclient/src/xcp_client/: mod.rs  xcp.rs
xlapi/: xl_pcap.c  xl_pcap.h  xl_udp.c  xl_udp.h
(+183 files in other folders)
